fix with spacing

--- a/packages/react-components/src/components/TagInput/TagInput.module.scss
+++ b/packages/react-components/src/components/TagInput/TagInput.module.scss
@@ -8,7 +8,7 @@
   border-radius: 4px;
   background: var(--surface-primary-default);
   background-clip: padding-box;
-  padding: 6px;
+  padding: 3px 6px;
   width: 100%;
   overflow-y: auto;
   color: var(--content-basic-primary);
